tests/build/cases/widget/cannot_remove_inherited_captured2.stderr
error: cannot remove, property `margin` is captured in fn `new_child`
 --> cases/widget/cannot_remove_inherited_captured2.rs:9:18
  |
9 |         remove { margin }
  |                  ^^^^^^

error: property `margin` is not inherited nor declared by the widget
  --> cases/widget/cannot_remove_inherited_captured2.rs:12:18
   |
12 |     fn new_child(margin: impl IntoVar<SideOffsets>) -> NilUiNode {
   |                  ^^^^^^

warning: unused import: `zero_ui::properties::margin`
 --> cases/widget/cannot_remove_inherited_captured2.rs:6:9
  |
6 |     use zero_ui::properties::margin;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
help: consider adding a `#[cfg(test)]` to the containing module
 --> cases/widget/cannot_remove_inherited_captured2.rs:3:1
  |
3 | #[widget($crate::test_widget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this warning originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
